--- a/nodejs-login/package.json
+++ b/nodejs-login/package.json
@@ -12,6 +12,7 @@
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
     "egg-view-nunjucks": "^2.2.0",
+    "fastdfs-client": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mz": "^2.7.0",
     "svg-captcha": "^1.4.0"
